[gd_scene load_steps=5 format=3 uid="uid://uat22xx4bt1m"]

[ext_resource type="Texture2D" uid="uid://dwj6d856d0vlv" path="res://assets/basketball_hoop_32x32.png" id="1_t5q24"]
[ext_resource type="Script" path="res://scenes/hoop.gd" id="2_4oeh5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3eoia"]
size = Vector2(14.0594, 0.792076)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0w0px"]
size = Vector2(1.05537, 1.09535)

[node name="hoop" type="Sprite2D"]
texture_filter = 1
position = Vector2(4753, 202)
scale = Vector2(5.05, 5.05)
texture = ExtResource("1_t5q24")
script = ExtResource("2_4oeh5")

[node name="ball_leaving" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball_leaving"]
position = Vector2(0.297058, -1.38614)
shape = SubResource("RectangleShape2D_3eoia")

[node name="ball_entering" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball_entering"]
position = Vector2(0.297058, -2.9703)
shape = SubResource("RectangleShape2D_3eoia")

[node name="start_hoop" type="StaticBody2D" parent="."]

[node name="ring_collision_body" type="CollisionShape2D" parent="start_hoop"]
position = Vector2(-8.56982, -2.58191)
shape = SubResource("RectangleShape2D_0w0px")

[node name="end_hoop" type="StaticBody2D" parent="."]

[node name="support_collision_body" type="CollisionPolygon2D" parent="end_hoop"]
polygon = PackedVector2Array(8.94995, -1.09535, 8.94995, -5.00734, 8.94995, -5.94621, 13.0027, -12.0489, 13.0027, 3.91198)

[node name="you_win_screen" type="Label" parent="."]
unique_name_in_owner = true
texture_repeat = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -27.5
offset_right = 4.0
offset_bottom = -4.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_exited" from="ball_leaving" to="." method="_on_ball_leaving_body_exited"]
[connection signal="body_entered" from="ball_entering" to="." method="_on_ball_entering_body_entered"]
